--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <title>Talk2Active</title>
+    <title>Online Quiz</title>
   </head>
   <body>
     <div id="root"></div>
